# Tsukasa-credit-card-gag-scam

./: .gitignore  README.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: codeql-analysis.yml  dependabot_updates.yml  github_release.yml  pylint.yml  pypi_deploy.yml  ruff.yml
src/: __main__.py  script.py
src/tccgs/: __main__.py  script.py
src/tccgs_data/: __init__.py
